<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/img">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/entrance"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:id="@+id/ll_sign"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textStyle="bold"
            android:textSize="36sp"
            android:textColor="@color/white"
            android:paddingHorizontal="68dp"/>
        <TextView
            android:id="@+id/tv_login"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp"/>
        <EditText
            android:text=""
            android:id="@+id/et_email"
            android:layout_marginTop="40dp"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:hint="@string/email"
            android:backgroundTint="@color/transparent_white"
            android:background="@drawable/bg_button"
            android:paddingVertical="16dp"
            android:paddingStart="16dp" />
        <EditText
            android:text=""
            android:id="@+id/et_password"
            android:layout_marginTop="24dp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:hint="@string/password"
            android:backgroundTint="@color/transparent_white"
            android:background="@drawable/bg_button"
            android:paddingVertical="16dp"
            android:paddingStart="16dp" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/sign"
            android:layout_marginTop="16dp"
            android:paddingVertical="12dp"
            app:cornerRadius="12dp"
            android:backgroundTint="@color/gray"/>


    </LinearLayout>

    <TextView
    app:layout_constraintTop_toBottomOf="@id/ll_sign"
    app:layout_constraintStart_toStartOf="@id/ll_sign"
    android:layout_marginTop="24dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/forgot"
    android:textColor="@color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>